...
                android:layout_height="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sp"
                android:gravity="end"
                android:visibility="gone">

                <com.myplex.myplex.utils.FontRegularTypeface
                    android:id="@+id/playerquality"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_gap_20"
                    android:layout_marginEnd="@dimen/_10sp"
                    android:background="@drawable/rounded_corner_splash"
...
                            android:layout_centerVertical="true"
                            android:paddingHorizontal="5dp"
                            android:paddingVertical="2dp"
                            android:layout_alignParentEnd="true">

                            <ImageView
                                android:id="@+id/playerfullscreenimage"
                                android:layout_width="@dimen/_11sdp"
                                android:layout_height="@dimen/_11sdp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginEnd="@dimen/margin_gap_9"
                                android:src="@drawable/icon_maximize_new" />
                        </RelativeLayout>
...
                        android:layout_marginRight="@dimen/margin_gap_4"
                        android:background="@android:color/transparent"
                        android:elevation="2dp"
                        android:focusable="true" />

                    <com.myplex.myplex.previewSeekBar.PreviewSeekBar
                        android:id="@+id/mediacontroller_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/divider_line"
                        android:layout_gravity="center"
                        android:elevation="2dp"
...
