...
        <LinearLayout
            android:id="@+id/rewind_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_gap_36"
            android:padding="@dimen/margin_gap_8"
            android:layout_toLeftOf="@+id/media_player_play_pause_icon"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/media_player_rewind_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/player_rewind_icon"
                android:paddingTop="@dimen/margin_gap_8"
                android:paddingLeft="@dimen/margin_gap_8"
...
                />

            <TextView
                android:id="@+id/media_player_rewind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/media_player_fowrard_icon"
                android:layout_toRightOf="@+id/media_player_play_pause_icon"
                android:layout_marginTop="@dimen/margin_gap_2"
                android:gravity="center"
                android:text="-30"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@android:color/white"
...
