...
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <ImageView
                android:id="@+id/carddetailbriefdescription_download_img"
                android:layout_width="@dimen/margin_gap_36"
                android:layout_height="@dimen/margin_gap_36"
                android:layout_marginTop="@dimen/margin_gap_8"
                android:layout_marginRight="@dimen/margin_gap_8"
                android:layout_marginLeft="@dimen/margin_gap_8"
                android:padding="@dimen/margin_gap_4"
                android:src="@drawable/episode_list_download_icon_complete"
                android:visibility="gone"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:id="@+id/carddetailbriefdescription_favourite_img"
                android:layout_width="@dimen/margin_gap_36"
                android:layout_height="@dimen/margin_gap_36"
                android:layout_marginTop="@dimen/margin_gap_8"
                android:layout_marginRight="@dimen/margin_gap_8"
                android:layout_marginLeft="@dimen/margin_gap_8"
                android:padding="@dimen/margin_gap_4"
...
